--- a/common/notatki.sty
+++ b/common/notatki.sty
@@ -15,6 +15,9 @@
 \usepackage{amsthm}
 \usepackage{amssymb}
 \usepackage{mathtools}
+\usepackage{algorithm}
+\usepackage[noend]{algpseudocode}
+\usepackage{minted}
 
 % Better links
 \usepackage{hyperref}
@@ -29,7 +32,10 @@
 % Prettier tables
 \usepackage{booktabs}
 
+% Quotations
 \usepackage{epigraph}
+\usepackage{csquotes}
+
 \usepackage[normalem]{ulem}
 
 % Fancy enumerations
