fix fancy header

--- a/dyskretna/main.tex
+++ b/dyskretna/main.tex
@@ -9,6 +9,7 @@
 % Please, let's familiarize ourselves with notatki.sty and tcs.sty so that we don't reinvent the wheel
 \usepackage{notatki}
 
+\fancyhead[L]{\textbf{\textit{MD}}}
 \author{
 }
 \title{TCS and shitposting}
