--- a/dyskretna/main.tex
+++ b/dyskretna/main.tex
@@ -1,5 +1,5 @@
  % Żeby nie było syfu to kolejne sekcje dodajemy do chapters/
-% A potem includujemy za pomocą \include{chapters/...}
+% A potem includujemy za pomocą \input{chapters/...}
 
 % Używamy \( \) i \[ \] zamiast dolarów -- tak jak się robi w LaTeXu
 
@@ -9,6 +9,7 @@
 % Please, let's familiarize ourselves with notatki.sty and tcs.sty so that we don't reinvent the wheel
 \usepackage{notatki}
 
+\fancyhead[L]{\textbf{\textit{MD}}}
 \author{
 }
 \title{TCS and shitposting}
@@ -19,39 +20,39 @@
 % Front page and table of contents
 \frontmatter
 
-\include{titlepage}
+\input{titlepage}
 
 \tableofcontents
-\include{license}
+\input{license}
 
 % Actual content
 \mainmatter
 
 \chapter{Kombinatoryka}
-\include{chapters/combinatorics/main}
+\input{chapters/combinatorics/main}
 
 \chapter{Zasada włączeń i wyłączeń}
-\include{chapters/exclusion-inclusion/main}
+\input{chapters/exclusion-inclusion/main}
 
 \chapter{Posety}
-\include{chapters/posets/main}
+\input{chapters/posets/main}
 
 \chapter{Twierdzenie Ramseya}
-\include{chapters/ramsey/main}
+\input{chapters/ramsey/main}
 
 \chapter{Funkcje tworzące}
-\include{chapters/generating_functions/main}
+\input{chapters/generating_functions/main}
 
 \chapter{Przepływy}
-\include{chapters/flows/main}
+\input{chapters/flows/main}
 
 \chapter{Skojarzenia}
-\include{chapters/matchings/main}
+\input{chapters/matchings/main}
 
 \chapter{Kolorowanie grafów}
-\include{chapters/graph-coloring/main}
+\input{chapters/graph-coloring/main}
 
 \chapter{Grafy, ale nie kolorowanie}
-\include{chapters/graph-misc/main}
+\input{chapters/graph-misc/main}
 
 \end{document}
