--- a/dyskretna/main.tex
+++ b/dyskretna/main.tex
@@ -35,7 +35,7 @@
 \chapter{Posety}
 \input{chapters/posets/main}
 
-\chapter{Twierdzenie Ramseya}
+\chapter{Twierdzenie Ramseya i przyjaciele}
 \input{chapters/ramsey/main}
 
 \chapter{Funkcje tworzące}
