--- a/dyskretna/main.tex
+++ b/dyskretna/main.tex
@@ -32,6 +32,9 @@
 \chapter{Zasada włączeń i wyłączeń}
 \input{chapters/exclusion-inclusion/main}
 
+\chapter{Teoria liczb}
+\input{chapters/number-theory/main}
+
 \chapter{Posety}
 \input{chapters/posets/main}
 
