--- a/systemy-operacyjne/titlepage.tex
+++ b/systemy-operacyjne/titlepage.tex
@@ -22,7 +22,7 @@
         \textit{\textsc{Popełnione przez}}\\
         \vspace{5mm}
   
-        \textbf{\textsc{Bajtocjanin \\ Zosia}}
+        \textbf{\textsc{Załatany Ponton\\ Dziurawy Ponton \\Bajtocjanin \\ Zosia}}
  
         \vfill
 
