--- a/numerki/titlepage.tex
+++ b/numerki/titlepage.tex
@@ -20,10 +20,10 @@
         \textit{,,Wada: niepewność''}
         \vspace{1cm}
 
-        % \textit{\textsc{Popełnione przez}}\\
-        % \vspace{5mm}
+        \textit{\textsc{Popełnione przez}}\\
+        \vspace{5mm}
   
-        % \textbf{\textsc{...}}
+        \textbf{\textsc{Pompona vanilla}}
  
         \vfill
 
