Dyskretna v2 - self-insert autora :)

--- a/dyskretna/titlepage.tex
+++ b/dyskretna/titlepage.tex
@@ -24,9 +24,9 @@
 
         \textit{\textsc{Popełnione przez}}\\
         \vspace{5mm}
-  
-        \textbf{\textsc{Dziurawy Ponton \\ Załatany Ponton \\ Puchaty Pompon \\ Zatopiony Ponton \\ Tonący Ponton}}
- 
+
+        \textbf{\textsc{Dziurawy Ponton \\ Załatany Ponton \\ Puchaty Pompon \\ Zatopiony Ponton \\ Tonący Ponton \\ Notnop}}
+
         \vfill
 
         Kraków \\
