--- a/aatl/titlepage.tex
+++ b/aatl/titlepage.tex
@@ -2,7 +2,7 @@
     \begin{center}
          \begin{figure}[h]
             \centering
-            \includegraphics[scale]{img/goat.png}
+            \includegraphics[width=0.5\textwidth]{img/goat.png}
         \end{figure}
         
         \Huge
@@ -10,13 +10,13 @@
         
         \vspace{0.5cm}
         \Large
-        \textsc{Wybrane Zagadnienia}
+        \textsc{Zagadnienia na Egzamin}
         \line(1,0){330}
         
         \normalsize
         
         \vspace{1cm}
-        \textit{,,Zrobią sobie Państwo dużo wrogów ale i tak zachęcam''}
+        \textit{,,Zrobią sobie Państwo dużo wrogów, ale i tak zachęcam''}
         \vspace{1cm}
 
         \textit{\textsc{Popełnione przez}}\\
@@ -25,10 +25,12 @@
         \textbf{\textsc{Chrząszczowy Pomp}}
   
         \textbf{\textsc{Animowany Ponton}}
+        
+        \textbf{\textsc{Pompona Vanilla}}
  
         \vfill
 
         Kraków \\
-        Anno Domini 2023
+        Anno Domini 2025
     \end{center}
 \end{titlepage}
