--- a/common/notatki.sty
+++ b/common/notatki.sty
@@ -19,14 +19,17 @@
 \usepackage[noend]{algpseudocode}
 \usepackage{minted}
 \usepackage{multicol}
+\usepackage{bbm}
 
 % Better links
 \usepackage{hyperref}
+\usepackage{xr}
 
 % Figures
 \usepackage{float}
 \usepackage{graphicx}
 \usepackage[justification=centering]{caption}
+\usepackage[dvipsnames]{xcolor}
 
 \usepackage{titlesec}
 
@@ -41,7 +44,6 @@
 
 % Fancy enumerations
 \usepackage{enumitem}
-
 
 % Header styles
 \usepackage{fancyhdr}
