--- a/aatl/main.tex
+++ b/aatl/main.tex
@@ -4,34 +4,22 @@
 % Używamy \( \) i \[ \] zamiast dolarów -- tak jak się robi w LaTeXu
 
 
-
 \documentclass[12pt, a4paper, polish, openany]{book}
 
 % Please, let's familiarize ourselves with notatki.sty and tcs.sty so that we don't reinvent the wheel
 \usepackage{notatki}
 \usepackage{mismath}
-\fancyhead[L]{\textbf{\textit{AATL}}}
+\DeclareMathAlphabet{\mathpzc}{OT1}{pzc}{m}{it}
+\fancyhead[L]{\ensuremath{\mathbf{\mathpzc{A}}^2 \!\mid\! T \!\!\cdot\!\! L}}
 
 \begin{document}
-
-% Front page and table of contents
-\frontmatter
 
 \input{titlepage}
 
 \tableofcontents
 \input{license}
 
-% Actual content
-\mainmatter
+\input{chapters/main}
 
-\chapter{Wykłady}
-\input{Chapters/lectures/main}
-
-\chapter{Rozwiązania Zadań}
-\input{Chapters/Exercises/main}
-
-\chapter{Pytania Egzaminacyjne}
-\input{Chapters/Exam/main}
 
 \end{document}
