Fix a minor issue with common reformatting

--- a/common/tcs.sty
+++ b/common/tcs.sty
@@ -63,7 +63,7 @@
 
 \let\im\nothing
 \DeclareMathOperator{\im}{im}
-\let\im\nothing
+\let\powerset\nothing
 \DeclareMathOperator{\powerset}{\mathcal{P}}
 \renewcommand{\complement}[1]{\overline{#1}}
 \let\function\rightarrow
@@ -171,7 +171,6 @@
 % Turing Machine
 \def\blank{\sqcup}
 
-<<<<<<< Updated upstream
 % Posets
 \providecommand\posetwidth[0]{\text{width}}
 \providecommand\posetheight[0]{\text{height}}
