Fixed issues with compilation of some packages
... except for `aatl` due to PR #25 at time of writing.

--- a/probabil/main.tex
+++ b/probabil/main.tex
@@ -8,9 +8,9 @@
 
 % Please, let's familiarize ourselves with notatki.sty and tcs.sty so that we don't reinvent the wheel
 \usepackage{notatki}
-\newcommand\R{\ensuremath{\mathbb{R}}}
-\newcommand\Q{\ensuremath{\mathbb{Q}}}
-\newcommand\N{\ensuremath{\mathbb{N}}}
+\renewcommand\R{\ensuremath{\mathbb{R}}}
+\renewcommand\Q{\ensuremath{\mathbb{Q}}}
+\renewcommand\N{\ensuremath{\mathbb{N}}}
 \renewcommand\O{\ensuremath{\emptyset}}
 \DeclareMathOperator{\Exp}{Exp}
 
