--- a/systemy-operacyjne/titlepage.tex
+++ b/systemy-operacyjne/titlepage.tex
@@ -1,32 +1,32 @@
-\begin{titlepage} 
-    \begin{center}
-         \begin{figure}[h]
-            \centering
+\begin{titlepage}
+	\begin{center}
+		\begin{figure}[h]
+			\centering
 			\includegraphics[scale=0.8]{img/raccoon.png}
-        \end{figure}
-        
-        \Huge
-        \textbf{\textsc{Systemy Operacyjne}}
-        
-        \vspace{0.5cm}
-        \Large
-        \textsc{Wybrane Zagadnienia}
-        \line(1,0){330}
-        
-        \normalsize
+		\end{figure}
 
-        \vspace{1cm}
-        \textit{,,Możecie zrobić Fork Bombę i wysłać na satori, nawet powinniście''}
-        \vspace{1cm}
+		\Huge
+		\textbf{\textsc{Systemy Operacyjne}}
 
-        \textit{\textsc{Popełnione przez}}\\
-        \vspace{5mm}
-  
-        \textbf{\textsc{Załatany Ponton\\ Dziurawy Ponton \\Bajtocjanin \\ Zosia}}
- 
-        \vfill
+		\vspace{0.5cm}
+		\Large
+		\textsc{Wybrane Zagadnienia}
+		\line(1,0){330}
 
-        Kraków \\
-        Anno Domini 2024
-    \end{center}
+		\normalsize
+
+		\vspace{1cm}
+		\textit{,,Możecie zrobić Fork Bombę i wysłać na Satori, nawet powinniście.''}
+		\vspace{1cm}
+
+		\textit{\textsc{Popełnione przez}}\\
+		\vspace{5mm}
+
+		\textbf{\textsc{Załatany Ponton\\ Dziurawy Ponton \\Bajtocjanin \\ Zosia \\ Nahtamatu}}
+
+		\vfill
+
+		Kraków \\
+		Anno Domini 2025
+	\end{center}
 \end{titlepage}
